--- a/BeautySalonCSS.css
+++ b/BeautySalonCSS.css
@@ -147,7 +147,8 @@ body {
   background-color: var(--ivory);
   box-shadow: 0 2px 7px rgba(128,0,32,.06);
   max-width: 100%;
-  padding: 50px
+  padding: 50px;
+  text-align: justify;
 }
 
 /* Services section */
@@ -214,7 +215,11 @@ body {
   box-shadow: 0 3px 10px rgba(128,0,32,0.1);
   border: 1.5px solid white;
   transition: background 0.2s, color 0.2s;
-  text-shadow: none;
+  text-shadow:    
+    -1px 1px 0 rgb(161, 158, 150),
+    1px -1px 0 rgb(161, 158, 150),
+    1px  1px 0 rgb(161, 158, 150),
+    -1px  -1px 0 rgb(161, 158, 150);
 }
 .service-link:hover {
   background: white;
