--- a/BeautySalonCSS.css
+++ b/BeautySalonCSS.css
@@ -278,6 +278,11 @@ body {
   transition: background 0.2s, color 0.2s;
   text-shadow: none;
   cursor: pointer;
+  text-shadow:    
+    -1px 1px 0 rgb(161, 158, 150),
+    1px -1px 0 rgb(161, 158, 150),
+    1px  1px 0 rgb(161, 158, 150),
+    -1px  -1px 0 rgb(161, 158, 150);
 }
 .service-link-catalog:hover {
   background: white;
